--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ tsconfig.tsbuildinfo
 **/dist/
 /packages/bundler/src/types/
 yarn-error.log
+packages/bundler/mnemonic.txt
+packages/bundler/localconfig/mnemonic.txt
 .vscode
