--- a/packages/bundler/localconfig/bundler.config.json
+++ b/packages/bundler/localconfig/bundler.config.json
@@ -2,13 +2,13 @@
   "gasFactor": "1",
   "port": "3000",
   "privateApiPort": "3001",
-  "network": "http://127.0.0.1:8545",
-  "entryPoint": "0x0000000071727De22E5E9d8BAf0edAc6f37da032",
-  "beneficiary": "0xd21934eD8eAf27a67f0A70042Af50A1D6d195E81",
-  "minBalance": "1",
+  "network": "https://pacific-rpc.sepolia-testnet.manta.network/http",
+  "entryPoint": "0xb4D56ACBB9D0111ca6F6C52190ce7460a2AA651d",
+  "beneficiary": "0xADE8c8B0FD4F01E3deceEbB3F1a80F79A7C27149",
+  "minBalance": "0.02",
   "mnemonic": "./localconfig/mnemonic.txt",
   "maxBundleGas": 5e6,
-  "minStake": "1" ,
+  "minStake": "0.002" ,
   "minUnstakeDelay": 0 ,
   "autoBundleInterval": 3,
   "autoBundleMempoolSize": 10,
@@ -16,3 +16,5 @@
   "rip7560Mode": "PULL",
   "gethDevMode": true
 }
+
+
