--- a/dockers/workdir/bundler.config.json
+++ b/dockers/workdir/bundler.config.json
@@ -1,7 +1,6 @@
 {
   "gasFactor": "1",
   "port": "3000",
-  "privateApiPort": "3001",
   "network": "https://pacific-rpc.sepolia-testnet.manta.network/http",
   "entryPoint": "0xb4D56ACBB9D0111ca6F6C52190ce7460a2AA651d",
   "beneficiary": "0xADE8c8B0FD4F01E3deceEbB3F1a80F79A7C27149",
@@ -11,10 +10,7 @@
   "minStake": "0.002" ,
   "minUnstakeDelay": 0 ,
   "autoBundleInterval": 3,
-  "autoBundleMempoolSize": 10,
-  "rip7560": false,
-  "rip7560Mode": "PULL",
-  "gethDevMode": true
+  "autoBundleMempoolSize": 10
 }
 
 
